Fixing mobile issues

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -37,7 +37,67 @@
         </div>
     </nav>
 
+    <!-- About us section -->
+    <section class="projects">
+        <div class="section-title">
+            <h1 class="h1-work">Meet us</h1>
+            <p class="meet-us">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex facilis doloribus sunt quisquam, animi ratione quibusdam quod doloremque culpa, iste nobis non beatae cupiditate? Dolorum magnam repellat iusto, eum voluptatum ratione vitae necessitatibus recusandae illo, amet, ex aspernatur aliquam facere natus ullam autem alias quasi accusantium adipisci suscipit assumenda. Debitis ipsam quas tenetur nihil quia consequuntur, veritatis, commodi excepturi dolorem illo, repellendus eligendi dolores mollitia harum cupiditate dolor velit neque. Commodi ab minima fugiat placeat.</p>
+        </div>
 
+        <div class="us">
+            <div class="dragos">
+                <div class="mypicture">
+                    <img src="../images/dragos.jpg" alt="">
+                </div>
+                <div class="about-me">
+                    <h2>Hi, I'm Dragos!</h1>
+                    <h5>Description</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eos placeat, hic beatae iure minima omnis tempore error saepe? Quos qui recusandae nostrum, at exercitationem dolores odit. Quod voluptates at natus quos nesciunt voluptas necessitatibus odio dolorum, laborum modi porro consequuntur qui temporibus eius?</p>
+                </div>
+            </div>
+
+            <div class="teo">
+                <div class="mypicture">
+                    <img src="../images/teo.jpg" alt="">
+                </div>
+                <div class="about-me">
+                    <h2>Hi, I'm Teo!</h1>
+                    <h5>Description</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eos placeat, hic beatae iure minima omnis tempore error saepe? Quos qui recusandae nostrum, at exercitationem dolores odit. Quod voluptates at natus quos nesciunt voluptas necessitatibus odio dolorum, laborum modi porro consequuntur qui temporibus eius?</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="where">
+            <h3>Where can you find us?</h3>
+            <div class="platforms">
+                <div class="platform">
+                    <h5>On YouTube</h5>
+                    <div class="link">
+                        <a href="www.youtube.com/trialanderrormakers"><img src="../images/icons/youtube-icon.svg" alt="">youtube.com/trialanderrormakers</a>
+                    </div>
+                </div>
+                <div class="platform">
+                    <h5>On Facebook</h5>
+                    <div class="link">
+                        <a href="www.facebook.com/trialanderrormakers"><img src="../images/icons/facebook-icon.svg" alt="">facebook.com/trialanderrormakers</a>
+                    </div>
+                </div>
+                <div class="platform">
+                    <h5>On Instagram</h5>
+                    <div class="link">
+                        <a href="www.instagram.com/trialanderrormakers"><img src="../images/icons/instagram-icon.svg" alt="">instagram.com/trialanderrormakers</a>
+                    </div>
+                </div>
+                <div class="platform">
+                    <h5>On Twitter</h5>
+                    <div class="link">
+                        <a href="www.twitter.com/trialanderrormakers"><img src="../images/icons/twitter-icon.svg" alt="">twitter.com/trialanderrormakers</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- This is the footer -->
     <div class="footer">
