--- a/contact/contact.html
+++ b/contact/contact.html
@@ -99,6 +99,46 @@
         </div>
     </section>
 
+    <div class="contact-form">
+        <div class="contact-container">
+            <h3>Contact Us</h3>
+            <div class="row100">
+                <div class="col">
+                    <div class="inputBox">
+                        <input type="text" name="" required="required">
+                        <span class="text">Name *</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="inputBox">
+                        <input type="email" name="" required="required">
+                        <span class="text">Email *</span>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="inputBox">
+                        <input type="text" name="" required="required">
+                        <span class="text">Phone number</span>
+                    </div>
+                </div>
+            </div>
+            <div class="row100">
+                <div class="col textarea-col">
+                    <div class="inputBox textarea">
+                        <textarea required="required"></textarea>
+                        <span class="text">Message</span>
+                        <span class="line"></span>
+                    </div>
+                </div>
+            </div>
+            <div class="row100">
+                <div class="col submit">
+                    <input type="submit" value="Send">
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- This is the footer -->
     <div class="footer">
         <div class="info-footer">
