--- a/work/work.html
+++ b/work/work.html
@@ -19,6 +19,7 @@
                 <li><a href="#"><img src="../images/icons/facebook-icon.svg" alt=""></a></li>
                 <li><a href="#"><img src="../images/icons/instagram-icon.svg" alt=""></a></li>
                 <li><a href="#"><img src="../images/icons/twitter-icon.svg" alt=""></a></li>
+                <li class="header-icon-mobile"><a href="#"><img src="../images/icons/youtube-icon.svg" alt=""></a></li>
             </ul>
         </div>
 
@@ -33,9 +34,24 @@
                 <li><a href="#" class="menu-active">Work</a></li>
                 <li><a href="#">YouTube Channel</a></li>
                 <li><a href="../contact/contact.html">Meet us</a></li>
+                <li class="header-icon-mobile burger-toggle"><img src="../images/icons/burger-menu.svg" alt=""></li>
             </ul>
         </div>
     </nav>
+    <div class="mobile-nav inactive-menu">
+        <ul>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">YouTube Channel</a></li>
+            <li><a href="../contact/contact.html">Meet us</a></li>
+        </ul>
+
+        <ul class="burger-social">
+            <li><a href="#"><img src="../images/icons/youtube-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/facebook-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/instagram-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/twitter-icon.svg" alt=""></a></li>
+        </ul>
+    </div>
 
     <!-- Our work - Homepage -->
     <section class="projects">
@@ -240,7 +256,7 @@
     <!-- This is the footer -->
     <div class="footer">
         <div class="info-footer">
-            <p>&copy; 2020 Trial And Error Makers</p>
+            <p>&copy; 2020 <span>Trial And Error Makers</span></p>
         </div>
 
         <div class="footer-logo">
