--- a/contact/contact.html
+++ b/contact/contact.html
@@ -19,6 +19,7 @@
                 <li><a href="#"><img src="../images/icons/facebook-icon.svg" alt=""></a></li>
                 <li><a href="#"><img src="../images/icons/instagram-icon.svg" alt=""></a></li>
                 <li><a href="#"><img src="../images/icons/twitter-icon.svg" alt=""></a></li>
+                <li class="header-icon-mobile"><a href="#"><img src="../images/icons/youtube-icon.svg" alt=""></a></li>
             </ul>
         </div>
 
@@ -33,9 +34,24 @@
                 <li><a href="../work/work.html">Work</a></li>
                 <li><a href="#">YouTube Channel</a></li>
                 <li><a href="../contact/contact.html" class="menu-active">Meet us</a></li>
+                <li class="header-icon-mobile burger-toggle"><img src="../images/icons/burger-menu.svg" alt=""></li>
             </ul>
         </div>
     </nav>
+    <div class="mobile-nav inactive-menu">
+        <ul>
+            <li><a href="../work/work.html">Work</a></li>
+            <li><a href="#">YouTube Channel</a></li>
+            <li><a href="#">Meet us</a></li>
+        </ul>
+
+        <ul class="burger-social">
+            <li><a href="#"><img src="../images/icons/youtube-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/facebook-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/instagram-icon.svg" alt=""></a></li>
+            <li><a href="#"><img src="../images/icons/twitter-icon.svg" alt=""></a></li>
+        </ul>
+    </div>
 
     <!-- About us section -->
     <section class="projects">
@@ -50,7 +66,7 @@
                     <img src="../images/dragos.jpg" alt="">
                 </div>
                 <div class="about-me">
-                    <h2>Hi, I'm Dragos!</h1>
+                    <h2>Hi, I'm Dragos!</h2>
                     <h5>Description</h5>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eos placeat, hic beatae iure minima omnis tempore error saepe? Quos qui recusandae nostrum, at exercitationem dolores odit. Quod voluptates at natus quos nesciunt voluptas necessitatibus odio dolorum, laborum modi porro consequuntur qui temporibus eius?</p>
                 </div>
@@ -61,7 +77,7 @@
                     <img src="../images/teo.jpg" alt="">
                 </div>
                 <div class="about-me">
-                    <h2>Hi, I'm Teo!</h1>
+                    <h2>Hi, I'm Teo!</h2>
                     <h5>Description</h5>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit eos placeat, hic beatae iure minima omnis tempore error saepe? Quos qui recusandae nostrum, at exercitationem dolores odit. Quod voluptates at natus quos nesciunt voluptas necessitatibus odio dolorum, laborum modi porro consequuntur qui temporibus eius?</p>
                 </div>
@@ -142,7 +158,7 @@
     <!-- This is the footer -->
     <div class="footer">
         <div class="info-footer">
-            <p>&copy; 2020 Trial And Error Makers</p>
+            <p>&copy; 2020 <span>Trial And Error Makers</span></p>
         </div>
 
         <div class="footer-logo">
